[metadata]
name = ta-pkg-NMMallick
version = 0.0.1
author = Nathaniel Mallick
author_email = nmm109@pitt.edu
description = Software for streamlined grading in ECE 0302 - University of Pittsburgh
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/NMMallick/ta
project_urls =
    Bug Tracker = https://github.com/NMMallick/ta/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src